--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyStudySpire</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MyStudySpire</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to MyStudySpire</h1>
-    <p>This is a free educational website for students.</p>
+  <h1>Welcome to MyStudySpire</h1>
+  <p>This is a free educational website for students.</p>
 
-    <button onclick="greet()">Click Me</button>
+  <!-- Button with ID -->
+  <button id="clickMeBtn">Click Me</button>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
-<button id="clickMeBtn">Click Me</button>
