--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <h1>Welcome to MyStudySpire</h1>
   <p>This is a free educational website for students.</p>
 
-  <!-- Button with ID -->
   <button id="clickMeBtn">Click Me</button>
+
+  <h2>Download Notes</h2>
+  <button onclick="downloadNotes('Maths')">Download Maths Notes</button>
+  <button onclick="downloadNotes('Science')">Download Science Notes</button>
+  <button onclick="downloadNotes('English')">Download English Notes</button>
 
   <script src="script.js"></script>
 </body>
