--- a/index.html
+++ b/index.html
@@ -20,3 +20,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+<a href="math.pdf" target="_blank">
+  <button>Download Math Notes</button>
+</a>
