--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyStudySpire</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MyStudySpire</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to MyStudySpire</h1>
-  <p>This is a free educational website for students.</p>
+    <h1>Welcome to MyStudySpire</h1>
+    <p>This is a free educational website for students.</p>
 
-  <button id="clickMeBtn">Click Me</button>
+    <!-- Button ka id fix -->
+    <button id="clickMeBtn">Download Notes</button>
 
-  <h2>Download Notes</h2>
-  <button onclick="downloadNotes('Maths')">Download Maths Notes</button>
-  <button onclick="downloadNotes('Science')">Download Science Notes</button>
-  <button onclick="downloadNotes('English')">Download English Notes</button>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
-<a href="math.pdf" target="_blank">
-  <button>Download Math Notes</button>
-</a>
