--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <h1>Welcome to MyStudySpire</h1>
   <p>This is a free educational website for students.</p>
 
-  <button onclick="downloadNotes('Maths')">Download Maths Notes</button>
+  <!-- Button to download math notes -->
+  <button onclick="downloadNotes('Maths')">Download Math Notes</button>
 
   <script src="script.js"></script>
 </body>
