--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyStudySpire</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Welcome to MyStudySpire</h1>
-  <p>This is a free educational website for students.</p>
+<a href="math.pdf" target="_blank">
+  <button>Download Math Notes</button>
+</a>
 
-  <!-- Button to download math notes -->
-  <button onclick="downloadNotes('Maths')">Download Math Notes</button>
-
-  <script src="script.js"></script>
-</body>
-</html>
 
