--- a/index.html
+++ b/index.html
@@ -5,41 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyStudySpire</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background-color: #f4f4f9;
-    }
-    h1 {
-      color: #333;
-    }
-    p {
-      color: #555;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-  </style>
 </head>
 <body>
-  <h1>Welcome to MyStudySpire</h1>
-  <p>This is a free educational website for students.</p>
+  <header>
+    <h1>📘 MyStudySpire</h1>
+    <p>Your free study companion</p>
+  </header>
 
-  <a href="math.pdf" target="_blank">
-    <button>Download Math Notes</button>
-  </a>
+  <main>
+    <h2>Welcome to MyStudySpire</h2>
+    <p>Get free study notes and resources for students.</p>
+    <a href="notes.html" class="btn">📂 Go to Notes</a>
+  </main>
 </body>
 </html>
+
 
 
