--- a/index.html
+++ b/index.html
@@ -3,20 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyStudySpire</title>
+  <title>Study Notes - MyStudySpire</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>📘 MyStudySpire</h1>
-    <p>Your free study companion</p>
+    <p>Download your subject notes (Google Drive Links)</p>
   </header>
 
-  <main>
-    <h2>Welcome to MyStudySpire</h2>
-    <p>Get free study notes and resources for students.</p>
-    <a href="notes.html" class="btn">📂 Go to Notes</a>
+  <main class="notes-container">
+
+    <!-- Mathematics -->
+    <div class="card">
+      <h3>Mathematics</h3>
+      <a href="https://drive.google.com/uc?export=download&id=1jveTh6rHMy8Pz4PxuS5roZVUOSUMt1bX" target="_blank" class="btn">
+        Download Math Notes
+      </a>
+    </div>
+
+    <!-- Science -->
+    <div class="card">
+      <h3>Science</h3>
+      <a href="#" target="_blank" class="btn">
+        Download Science Notes
+      </a>
+    </div>
+
+    <!-- English -->
+    <div class="card">
+      <h3>English</h3>
+      <a href="#" target="_blank" class="btn">
+        Download English Notes
+      </a>
+    </div>
+
+    <!-- Physics -->
+    <div class="card">
+      <h3>Physics</h3>
+      <a href="#" target="_blank" class="btn">
+        Download Physics Notes
+      </a>
+    </div>
+
   </main>
+
+  <footer>
+    <p>© 2025 MyStudySpire | All Rights Reserved</p>
+  </footer>
 </body>
 </html>
 
