--- a/notes.html
+++ b/notes.html
@@ -39,4 +39,7 @@
   </footer>
 </body>
 </html>
+<a href="https://drive.google.com/uc?export=download&id=1jveTh6rHMy8Pz4PxuS5roZVUOSUMt1bX" target="_blank">
+  <button>Download Math Notes</button>
+</a>
 
