--- a/notes.html
+++ b/notes.html
@@ -5,33 +5,91 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Study Notes - MyStudySpire</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f9;
+      color: #333;
+      text-align: center;
+    }
+    header {
+      background: #4CAF50;
+      color: white;
+      padding: 20px;
+    }
+    .notes-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 20px;
+      gap: 20px;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      width: 250px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .card h3 {
+      margin-bottom: 15px;
+    }
+    .btn {
+      display: inline-block;
+      padding: 10px 15px;
+      background: #4CAF50;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background: #45a049;
+    }
+    footer {
+      background: #333;
+      color: white;
+      padding: 10px;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>📘 MyStudySpire</h1>
-    <p>Download your subject notes</p>
+    <h1>📘 MyStudySpire Notes</h1>
+    <p>Click below to download subject-wise notes</p>
   </header>
 
   <main class="notes-container">
+
+    <!-- Mathematics -->
     <div class="card">
       <h3>Mathematics</h3>
-      <a href="math.pdf" target="_blank" class="btn">Download Notes</a>
+      <a href="https://drive.google.com/uc?export=download&id=1jveTh6rHMy8Pz4PxuS5roZVUOSUMt1bX" target="_blank" class="btn">
+        Download Math Notes
+      </a>
     </div>
 
+    <!-- Science -->
     <div class="card">
       <h3>Science</h3>
-      <a href="science.pdf" target="_blank" class="btn">Download Notes</a>
+      <a href="#" target="_blank" class="btn">Download Science Notes</a>
     </div>
 
+    <!-- English -->
     <div class="card">
       <h3>English</h3>
-      <a href="english.pdf" target="_blank" class="btn">Download Notes</a>
+      <a href="#" target="_blank" class="btn">Download English Notes</a>
     </div>
 
+    <!-- Physics -->
     <div class="card">
       <h3>Physics</h3>
-      <a href="physics.pdf" target="_blank" class="btn">Download Notes</a>
+      <a href="#" target="_blank" class="btn">Download Physics Notes</a>
     </div>
+
   </main>
 
   <footer>
@@ -39,7 +97,4 @@
   </footer>
 </body>
 </html>
-<a href="https://drive.google.com/uc?export=download&id=1jveTh6rHMy8Pz4PxuS5roZVUOSUMt1bX" target="_blank">
-  <button>Download Math Notes</button>
-</a>
 
