--- a/notes.html
+++ b/notes.html
@@ -3,29 +3,87 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Study Notes - MyStudySpire</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Study Notes</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background: #f8f9fa;
       margin: 0;
       padding: 0;
-      background: #f4f4f9;
-      color: #333;
-      text-align: center;
     }
     header {
-      background: #4CAF50;
+      background: #007bff;
       color: white;
+      padding: 15px;
+      text-align: center;
+    }
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
       padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
-    .notes-container {
+    h2 {
+      color: #007bff;
+    }
+    .note {
+      margin: 15px 0;
+      padding: 15px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin: 20px;
-      gap: 20px;
+      justify-content: space-between;
+      align-items: center;
     }
+    .note button {
+      background: #28a745;
+      color: white;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .note button:hover {
+      background: #218838;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>📘 Study Notes</h1>
+  </header>
+
+  <div class="container">
+    <h2>Available Notes</h2>
+
+    <div class="note">
+      <span>📐 Math Notes</span>
+      <a href="math.pdf" download><button>Download</button></a>
+    </div>
+
+    <div class="note">
+      <span>🔬 Science Notes</span>
+      <a href="science.pdf" download><button>Download</button></a>
+    </div>
+
+    <div class="note">
+      <span>📖 English Notes</span>
+      <a href="english.pdf" download><button>Download</button></a>
+    </div>
+
+    <div class="note">
+      <span>🌍 Geography Notes</span>
+      <a href="geography.pdf" download><button>Download</button></a>
+    </div>
+  </div>
+
+</body>
+</html>
+
     .card {
       background: white;
       padding: 20px;
