--- a/notes.html
+++ b/notes.html
@@ -79,80 +79,22 @@
       <span>🌍 Geography Notes</span>
       <a href="geography.pdf" download><button>Download</button></a>
     </div>
+
+    <div class="note">
+      <span>📜 History Notes</span>
+      <a href="history.pdf" download><button>Download</button></a>
+    </div>
+
+    <div class="note">
+      <span>📝 Hindi Notes</span>
+      <a href="hindi.pdf" download><button>Download</button></a>
+    </div>
+
+    <div class="note">
+      <span>💻 Computer Science Notes</span>
+      <a href="computer.pdf" download><button>Download</button></a>
+    </div>
   </div>
 
 </body>
 </html>
-
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      width: 250px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-    .card h3 {
-      margin-bottom: 15px;
-    }
-    .btn {
-      display: inline-block;
-      padding: 10px 15px;
-      background: #4CAF50;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    .btn:hover {
-      background: #45a049;
-    }
-    footer {
-      background: #333;
-      color: white;
-      padding: 10px;
-      margin-top: 30px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>📘 MyStudySpire Notes</h1>
-    <p>Click below to download subject-wise notes</p>
-  </header>
-
-  <main class="notes-container">
-
-    <!-- Mathematics -->
-    <div class="card">
-      <h3>Mathematics</h3>
-      <a href="https://drive.google.com/uc?export=download&id=1jveTh6rHMy8Pz4PxuS5roZVUOSUMt1bX" target="_blank" class="btn">
-        Download Math Notes
-      </a>
-    </div>
-
-    <!-- Science -->
-    <div class="card">
-      <h3>Science</h3>
-      <a href="#" target="_blank" class="btn">Download Science Notes</a>
-    </div>
-
-    <!-- English -->
-    <div class="card">
-      <h3>English</h3>
-      <a href="#" target="_blank" class="btn">Download English Notes</a>
-    </div>
-
-    <!-- Physics -->
-    <div class="card">
-      <h3>Physics</h3>
-      <a href="#" target="_blank" class="btn">Download Physics Notes</a>
-    </div>
-
-  </main>
-
-  <footer>
-    <p>© 2025 MyStudySpire | All Rights Reserved</p>
-  </footer>
-</body>
-</html>
-
