--- a/notes.html
+++ b/notes.html
@@ -60,37 +60,37 @@
   <div class="container">
     <h2>Available Notes</h2>
 
-    <div class="note">
+    <div class="note math">
       <span>📐 Math Notes</span>
       <a href="math.pdf" download><button>Download</button></a>
     </div>
 
-    <div class="note">
+    <div class="note science">
       <span>🔬 Science Notes</span>
       <a href="science.pdf" download><button>Download</button></a>
     </div>
 
-    <div class="note">
+    <div class="note english">
       <span>📖 English Notes</span>
       <a href="english.pdf" download><button>Download</button></a>
     </div>
 
-    <div class="note">
+    <div class="note geography">
       <span>🌍 Geography Notes</span>
       <a href="geography.pdf" download><button>Download</button></a>
     </div>
 
-    <div class="note">
+    <div class="note history">
       <span>📜 History Notes</span>
       <a href="history.pdf" download><button>Download</button></a>
     </div>
 
-    <div class="note">
+    <div class="note hindi">
       <span>📝 Hindi Notes</span>
       <a href="hindi.pdf" download><button>Download</button></a>
     </div>
 
-    <div class="note">
+    <div class="note computer">
       <span>💻 Computer Science Notes</span>
       <a href="computer.pdf" download><button>Download</button></a>
     </div>
