--- a/classes.html
+++ b/classes.html
@@ -3,74 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Choose Your Class</title>
+  <title>Select Class</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f9;
+      background: #f8f9fa;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
-      text-align: center;
     }
-    header {
+    h1 {
+      margin-bottom: 20px;
+      color: #007bff;
+    }
+    .btn {
+      display: block;
+      margin: 10px;
+      padding: 15px 25px;
+      font-size: 18px;
       background: #007bff;
       color: white;
-      padding: 20px;
-      font-size: 24px;
-    }
-    .classes {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      padding: 30px;
-      max-width: 900px;
-      margin: auto;
-    }
-    .class-box {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      transition: 0.3s;
-      cursor: pointer;
-    }
-    .class-box:hover {
-      background: #e3f2fd;
-      transform: scale(1.05);
-    }
-    a {
       text-decoration: none;
-      color: #007bff;
-      font-weight: bold;
-      display: block;
-      margin-top: 10px;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+    .btn:hover {
+      background: #0056b3;
     }
   </style>
 </head>
 <body>
-  <header>🏫 Choose Your Class</header>
 
-  <div class="classes">
-    <div class="class-box">
-      Class 6
-      <a href="notes.html?class=6">View Subjects</a>
-    </div>
-    <div class="class-box">
-      Class 7
-      <a href="notes.html?class=7">View Subjects</a>
-    </div>
-    <div class="class-box">
-      Class 8
-      <a href="notes.html?class=8">View Subjects</a>
-    </div>
-    <div class="class-box">
-      Class 9
-      <a href="notes.html?class=9">View Subjects</a>
-    </div>
-    <div class="class-box">
-      Class 10
-      <a href="notes.html?class=10">View Subjects</a>
-    </div>
-  </div>
+  <h1>📚 Select Your Class</h1>
+  
+  <a href="notes.html?class=6" class="btn">Class 6</a>
+  <a href="notes.html?class=7" class="btn">Class 7</a>
+  <a href="notes.html?class=8" class="btn">Class 8</a>
+  <a href="notes.html?class=9" class="btn">Class 9</a>
+  <a href="notes.html?class=10" class="btn">Class 10</a>
+
 </body>
 </html>
