--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #eef2f7;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #e0f7fa, #e3f2fd);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,16 +16,16 @@
     }
 
     .container {
-      background: #fff;
       display: flex;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      overflow: hidden;
       width: 80%;
       max-width: 1000px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-      overflow: hidden;
     }
 
-    .illustration {
+    .left {
       flex: 1;
       background: #f5f9ff;
       display: flex;
@@ -34,25 +34,25 @@
       padding: 20px;
     }
 
-    .illustration img {
-      width: 80%;
-      max-width: 400px;
+    .left img {
+      max-width: 90%;
+      height: auto;
     }
 
-    .content {
+    .right {
       flex: 1;
       padding: 40px;
       text-align: center;
     }
 
-    .content h1 {
-      color: #0066ff;
+    .right h1 {
+      color: #007bff;
       margin-bottom: 10px;
     }
 
-    .content p {
-      color: #444;
-      margin-bottom: 25px;
+    .right p {
+      color: #555;
+      margin-bottom: 30px;
     }
 
     .btn {
@@ -60,24 +60,24 @@
       width: 60%;
       margin: 10px auto;
       padding: 12px;
-      background: #0066ff;
+      background: #007bff;
       color: white;
+      font-size: 16px;
+      font-weight: bold;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-      transition: 0.3s;
-      text-decoration: none;
+      transition: background 0.3s;
     }
 
     .btn:hover {
-      background: #004ecc;
+      background: #0056b3;
     }
 
     .subscribe-btn {
-      background: #28a745;
       margin-top: 20px;
+      background: #28a745;
+      color: white;
     }
 
     .subscribe-btn:hover {
@@ -87,7 +87,24 @@
 </head>
 <body>
   <div class="container">
-    <!-- Left side illustration -->
-    <div class="illustration">
-      <img src
+    <!-- Left illustration -->
+    <div class="left">
+      <img src="https://cdn-icons-png.flaticon.com/512/201/201623.png" alt="Student studying">
+    </div>
 
+    <!-- Right content -->
+    <div class="right">
+      <h1>📘 Welcome to MyStudySpire</h1>
+      <p>Select your class to access study notes</p>
+
+      <button class="btn" onclick="location.href='notes.html?class=6'">Class 6</button>
+      <button class="btn" onclick="location.href='notes.html?class=7'">Class 7</button>
+      <button class="btn" onclick="location.href='notes.html?class=8'">Class 8</button>
+      <button class="btn" onclick="location.href='notes.html?class=9'">Class 9</button>
+      <button class="btn" onclick="location.href='notes.html?class=10'">Class 10</button>
+
+      <button class="btn subscribe-btn">🔔 Subscribe for Notifications</button>
+    </div>
+  </div>
+</body>
+</html>
