--- a/index.html
+++ b/index.html
@@ -17,12 +17,40 @@
 
     .container {
       display: flex;
+      flex-direction: column;
       background: white;
       border-radius: 12px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.1);
       overflow: hidden;
-      width: 80%;
-      max-width: 1000px;
+      width: 90%;
+      max-width: 1100px;
+    }
+
+    /* Header with logo */
+    .header {
+      display: flex;
+      align-items: center;
+      padding: 15px 25px;
+      background: #f8f9fa;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .header img {
+      height: 35px;
+      margin-right: 10px;
+    }
+
+    .header h2 {
+      margin: 0;
+      font-size: 22px;
+      color: #007bff;
+      font-weight: bold;
+    }
+
+    /* Main content area */
+    .main {
+      display: flex;
+      flex: 1;
     }
 
     .left {
@@ -87,23 +115,33 @@
 </head>
 <body>
   <div class="container">
-    <!-- Left illustration -->
-    <div class="left">
-      <img src="https://cdn-icons-png.flaticon.com/512/201/201623.png" alt="Student studying">
+
+    <!-- Header -->
+    <div class="header">
+      <img src="https://cdn-icons-png.flaticon.com/512/1048/1048944.png" alt="Logo">
+      <h2>MyStudySpire</h2>
     </div>
 
-    <!-- Right content -->
-    <div class="right">
-      <h1>📘 Welcome to MyStudySpire</h1>
-      <p>Select your class to access study notes</p>
+    <!-- Main Content -->
+    <div class="main">
+      <!-- Left illustration -->
+      <div class="left">
+        <img src="https://cdn-icons-png.flaticon.com/512/201/201623.png" alt="Student studying">
+      </div>
 
-      <button class="btn" onclick="location.href='notes.html?class=6'">Class 6</button>
-      <button class="btn" onclick="location.href='notes.html?class=7'">Class 7</button>
-      <button class="btn" onclick="location.href='notes.html?class=8'">Class 8</button>
-      <button class="btn" onclick="location.href='notes.html?class=9'">Class 9</button>
-      <button class="btn" onclick="location.href='notes.html?class=10'">Class 10</button>
+      <!-- Right content -->
+      <div class="right">
+        <h1>📘 Welcome to MyStudySpire</h1>
+        <p>Select your class to access study notes</p>
 
-      <button class="btn subscribe-btn">🔔 Subscribe for Notifications</button>
+        <button class="btn" onclick="location.href='notes.html?class=6'">Class 6</button>
+        <button class="btn" onclick="location.href='notes.html?class=7'">Class 7</button>
+        <button class="btn" onclick="location.href='notes.html?class=8'">Class 8</button>
+        <button class="btn" onclick="location.href='notes.html?class=9'">Class 9</button>
+        <button class="btn" onclick="location.href='notes.html?class=10'">Class 10</button>
+
+        <button class="btn subscribe-btn">🔔 Subscribe for Notifications</button>
+      </div>
     </div>
   </div>
 </body>
