--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #e3f2fd);
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: linear-gradient(135deg, #dbeafe, #e0f2fe);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,38 +16,38 @@
     }
 
     .container {
+      background: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      width: 95%;
+      max-width: 1100px;
       display: flex;
       flex-direction: column;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      overflow: hidden;
-      width: 90%;
-      max-width: 1100px;
     }
 
-    /* Header with logo */
+    /* Header bar */
     .header {
       display: flex;
       align-items: center;
       padding: 15px 25px;
-      background: #f8f9fa;
+      background: #f0f9ff;
       border-bottom: 1px solid #ddd;
     }
 
     .header img {
-      height: 35px;
-      margin-right: 10px;
+      height: 40px;
+      margin-right: 12px;
     }
 
     .header h2 {
       margin: 0;
-      font-size: 22px;
-      color: #007bff;
+      font-size: 24px;
+      color: #2563eb;
       font-weight: bold;
     }
 
-    /* Main content area */
+    /* Main content split */
     .main {
       display: flex;
       flex: 1;
@@ -55,11 +55,11 @@
 
     .left {
       flex: 1;
-      background: #f5f9ff;
+      background: #f9fbff;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px;
+      padding: 30px;
     }
 
     .left img {
@@ -69,47 +69,50 @@
 
     .right {
       flex: 1;
-      padding: 40px;
+      padding: 50px 30px;
       text-align: center;
     }
 
     .right h1 {
-      color: #007bff;
+      color: #2563eb;
       margin-bottom: 10px;
+      font-size: 26px;
     }
 
     .right p {
       color: #555;
       margin-bottom: 30px;
+      font-size: 16px;
     }
 
     .btn {
       display: block;
-      width: 60%;
-      margin: 10px auto;
-      padding: 12px;
-      background: #007bff;
+      width: 70%;
+      margin: 12px auto;
+      padding: 14px;
+      background: #2563eb;
       color: white;
-      font-size: 16px;
+      font-size: 17px;
       font-weight: bold;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: transform 0.2s, background 0.3s;
     }
 
     .btn:hover {
-      background: #0056b3;
+      background: #1d4ed8;
+      transform: translateY(-2px);
     }
 
     .subscribe-btn {
       margin-top: 20px;
-      background: #28a745;
+      background: #16a34a;
       color: white;
     }
 
     .subscribe-btn:hover {
-      background: #1e7e34;
+      background: #15803d;
     }
   </style>
 </head>
@@ -118,15 +121,15 @@
 
     <!-- Header -->
     <div class="header">
-      <img src="https://cdn-icons-png.flaticon.com/512/1048/1048944.png" alt="Logo">
+      <img src="https://cdn-icons-png.flaticon.com/512/3135/3135755.png" alt="Logo">
       <h2>MyStudySpire</h2>
     </div>
 
-    <!-- Main Content -->
+    <!-- Main content -->
     <div class="main">
       <!-- Left illustration -->
       <div class="left">
-        <img src="https://cdn-icons-png.flaticon.com/512/201/201623.png" alt="Student studying">
+        <img src="https://cdn-icons-png.flaticon.com/512/2942/2942921.png" alt="Study illustration">
       </div>
 
       <!-- Right content -->
